--- a/packages/agent0/.env.default
+++ b/packages/agent0/.env.default
@@ -30,3 +30,6 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
+# ClientID and secret used for Approval Push Notification App
+HITLAPPROVALCLIENTID=MYOKTAAPPCLIENTID
+HITLAPPROVALCLIENTSECRET=MYOKTAAPPCLIENTSECRET
